--- a/root/css/about.css
+++ b/root/css/about.css
@@ -68,8 +68,6 @@ th,
         padding-top: 15px;
         text-align: left;
         border: 0;
-        /* border-style: solid; */
-        /* border-bottom: 1px solid rgb(103, 103, 103); */
         border-left: none;
         border-collapse: collapse;
         letter-spacing: .9pt;
@@ -279,7 +277,6 @@ li {
     font-family: magneta, serif;
     font-weight: 400;
     font-style: normal;
-    /* position: relative; */
     font-size: 13px;
     display: table;
     text-align: center;
@@ -287,11 +284,7 @@ li {
     margin-right: auto;
     padding-bottom: 15px;
 }
-/* .back-to-top-wrapper {
-position: absolute;
-top: $scrollLength;
-rigt: .25rem;
-} */
+
 
 @media screen and (prefers-reduced-motion: no-preference) {
     html {
@@ -300,15 +293,7 @@ rigt: .25rem;
     #homeIcon{
         position: relative;
     }
-    /* #homeIcon {
-        padding-bottom: 5px;
-        margin-top: 20px;
-        margin-left: 3%;
-        position:fixed;
-      
-        width:50px;
-      
-    } */
+  
 }
 
 html {
@@ -318,9 +303,6 @@ html {
 html,
 body {
     max-width: 100%;
-    /* overflow-x: scroll;
-    overflow-x: hidden; */
-    /* overflow-x: hidden; */
 }
 
 h5 {
@@ -867,11 +849,9 @@ a.bottom:hover:before {
 
 
 #working {
-    /* width: 20%; */
     height: 300px;
     position: absolute;
     opacity: 70%;
-    /* z-index: 1000; */
     text-align: left;
     margin-left: 50%;
     margin-top: 60%;
@@ -896,12 +876,8 @@ button {
     color: inherit;
     border: none;
     padding: 0;
-    /* font: inherit; */
     cursor: pointer;
-    /* outline: inherit; */
 }
-
-  /* collabsible */
     
   details {
     user-select: none;
@@ -922,8 +898,6 @@ details[open] summary span.icon {
 summary {
     display: flex;
     cursor: pointer;
-    /* display: inline-block; */
-    /* transform: rotate(180deg); */
 }
 
 summary::-webkit-details-marker {
@@ -958,10 +932,6 @@ footer{
     margin-top: 400px;
 }
  }
-
-
-
-
 
 
  /* Fix nav */
@@ -1028,7 +998,7 @@ ul.sideNav li {
 
 
 a {
-    color:#747474;
+    color: rgb(74, 74, 74);
     text-decoration: none;
     display: inline-block;
 }
@@ -1040,11 +1010,6 @@ a:hover {
     -o-transition: color .2s ease-out;
     transition: color .2s ease-out;
 }
-
-
-
-
-
 
 
 h6 {
@@ -1066,7 +1031,6 @@ a {
 }
 
 #menuLinks {
-    /*font size for toggled menu links*/
     font-size: 20px;
     padding-bottom: 20px;
     text-shadow: 0px 1px 2px rgb(237, 237, 237);
@@ -1105,16 +1069,13 @@ a {
 {
     h1 {
         white-space: nowrap;
-        /* text-shadow: 0px 0px 1px #bfbfbf; */
-        
+       
     }
     body{ 
-         /* overflow-x: scroll; */
          overflow-x: hidden;
     }
     .menu-wrap .menu {
 
-        /* top: 20; */
         left: 30%;
         width: 80%;
         height: 14%;
@@ -1126,25 +1087,17 @@ a {
     }
     
     #divideLine {
-
-
         color:#747474;
         margin-right: 1%;
         margin-left: 1%;
-
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
-
         font-size: 9.5px;
-        /* line-height: 10px;
-        vertical-align: middle; */
     }
-
 }
 
 @media (max-width: 500px) {
-   
 
     .menu-wrap .menu {
         right: 10%;
@@ -1156,13 +1109,9 @@ a {
         justify-content: center;
     }
 
-    
-
     #divideTab {
       display: none;
     }
-
- 
 
     #menuLinks {
         font-size: 3.5vw;
@@ -1172,11 +1121,7 @@ a {
     ul{
         margin-right: 1rem;
     }
-
-    
 }
-
-
 
 a.bottom {
     position: relative;
@@ -1194,7 +1139,6 @@ a.bottom:hover:before {
     overflow: hidden;
 }
 
-
 /* Dropdown button */
 
 .dropdown .dropbtn {
@@ -1204,7 +1148,6 @@ a.bottom:hover:before {
     background-color: inherit;
     font-family: inherit;
 }
-
 
 /* Add a red background color to navbar links on hover */
 
@@ -1222,10 +1165,6 @@ a.bottom:hover:before {
     text-align: left;
 }
 
-/* .dropdown-content a:hover {
-    color: gray;
-
-} */
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -1262,15 +1201,11 @@ a.bottom:hover:before {
     font-weight: 400;
     font-style: normal;
     font-size: 5px;
-    /* margin-bottom: 10px; */
 }
 
 .btn:hover {
     opacity: 0.7;
 }
-
-
-/* MENU STYLES */
 
 .menu-wrap {
     top: 0;
@@ -1305,7 +1240,6 @@ a.bottom:hover:before {
     justify-content: center;
 }
 
-
 /* Hamburger Line */
 
 .menu-wrap .hamburger>div {
@@ -1320,7 +1254,6 @@ a.bottom:hover:before {
     transition: all 0.4s ease;
 }
 
-
 /* Hamburger Lines - Top & Bottom */
 
 .menu-wrap .hamburger>div::before,
@@ -1334,20 +1267,17 @@ a.bottom:hover:before {
     background: inherit;
 }
 
-
 /* Moves Line Down */
 
 .menu-wrap .hamburger>div::after {
     top: 10px;
 }
 
-
 /* Toggler Animation */
 
 .menu-wrap .toggler:checked+.hamburger>div {
     transform: rotate(135deg);
 }
-
 
 /* Turns Lines Into X */
 
@@ -1357,13 +1287,11 @@ a.bottom:hover:before {
     transform: rotate(90deg);
 }
 
-
 /* Rotate On Hover When Checked */
 
 .menu-wrap .toggler:checked:hover+.hamburger>div {
     transform: rotate(225deg);
 }
-
 
 /* Show Menu */
 
@@ -1383,26 +1311,14 @@ a.bottom:hover:before {
 
 .menu-wrap .menu {
     position: fixed;
-     /* position: relative; */
-     /* position: static; */
      margin-left: -5%;
-/* position: absolute;  */
-    /* top: 0; */
-    /* margin-right: 50px; */
     visibility: hidden;
- 
-    /* overflow: hidden; */
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
 }
 
 .menu-wrap .menu>div {
     background: var(--overlay-color);
     border-radius: 10%;
-    /* width: 100vw; */
-    /* height: 100vw; */
-    /* display: flex; */
     flex: none;
     align-items: center;
     justify-content: center;
@@ -1411,7 +1327,6 @@ a.bottom:hover:before {
 }
 
 .menu-wrap .menu>div>div {
-        /* margin-top: 20px; */
     text-align: right;
     max-width: 100vw;
     max-height: 100vh;
@@ -1420,11 +1335,7 @@ a.bottom:hover:before {
 }
 
 .menu-wrap .menu>div>div>ul>li {
-
     list-style: none;
-    /* color: #fff; */
-    /* color:greenyellow; */
-    /* color: rgb(28, 28, 28); */
     color: #747474;
     font-size: .5vw;
     font-family: rubik, sans-serif;
