--- a/root/css/experiments.css
+++ b/root/css/experiments.css
@@ -28,7 +28,6 @@ letter-spacing: 2px;
 #underName {
     font-size: 80px;
     padding-top: 300px;
-    /* color: rgb(217, 217, 217); */
     color:#747474;
     line-height: .1;
 
@@ -39,36 +38,23 @@ letter-spacing: 2px;
     font-family: rubik, sans-serif;
     font-weight: 400;
     font-style: normal;
-
-
     position: relative;
     padding-bottom: -20px;
     line-height: 0px;
     text-align: left;
-    /* color: rgb(58, 58, 58); */
     color:#747474;
- 
-    /* color: rgb(74, 74, 74); */
-    /* colorsz color: rgba(104, 115, 119, 10); */
 }
 #featured {
     font-size: 11px;
     letter-spacing: 2px;
- 
     font-family: rubik, sans-serif;
     font-weight: 200;
     font-style: normal;
-
-
     position: relative;
     padding-bottom: -20px;
     line-height: 0px;
     text-align: left;
-    /* color: rgb(58, 58, 58); */
     color:#747474;
- 
-    /* color: rgb(74, 74, 74); */
-    /* colorsz color: rgba(104, 115, 119, 10); */
 }
 
 .my-element {
@@ -91,7 +77,6 @@ img {
     margin-top: 20px;
     margin-left: 2%;
     position: fixed;
-    /* width: 300px; */
 }
 
 #homeLink {
@@ -118,9 +103,7 @@ ul {
 
 li {
     display: inline-block;
-    /* text-align: right; */
     text-align: center;
-    /*  padding-right: 10px;*/
     font-family: magneta, serif;
     font-weight: 400;
     font-style: normal;
@@ -135,8 +118,6 @@ li {
     right: 0;
     -webkit-transform-origin: left top;
     -webkit-transform: rotate(-90deg) translateX(-100%);
-    /* width:100vh;    
-            height:45px; */
     position: fixed;
     background: #4c4c4c;
 }
@@ -156,9 +137,6 @@ ul.sideNav li {
 }
 
 a {
-    /* d19 */
-    /* color: rgb(179, 179, 179); */
-    /* color: rgb(97, 95, 95); */
     color: rgb(74, 74, 74);
     text-decoration: none;
     display: inline-block;
@@ -184,38 +162,18 @@ h1 {
     font-style: normal;
 }
 
-
-/* potion for name */
-
-
-
-
-/*End Name*/
-
 h2 {
     color: rgb(74, 74, 74);
     font-size: 12px;
-    /* letter-spacing: 2px; */
     position: relative;
 }
-/* 
-#underName {
-
-    line-height: 1px;
-    position: relative;
-    font-family: roboto-slab, serif;
-    font-weight: 300;
-    font-style: normal
-} */
-
-
 
     #footer {
         display: table;
         text-align: center;
         margin-left: auto;
         margin-right: auto;
- padding-top: 8px;
+        padding-top: 8px;
         letter-spacing: 1px;
         color: rgb(74, 74, 74);
         font-size: 13px;
@@ -224,7 +182,6 @@ h2 {
     }
 
 h6 {
-    /* color: rgb(74, 74, 74); */
     color:#747474;
     font-size: 10px;
 }
@@ -258,24 +215,12 @@ a {
         overflow: scroll;  
         overflow-x: scroll;   
     }
-    /* #myButton{
-        margin-bottom: .1vh;
-        padding-bottom: .1vh;
-    } */
+ 
     .back-to-top-link {
         color: white;
-        /* font-size: 2rem; */
-        /* padding-top: 2%; */
         letter-spacing: 3px;
-        /* font-family: magneta, serif;
-        font-weight: 400;
-        font-style: normal; */
-        /* position: relative; */
         font-size: 13px;
         display: table;
-        /* text-align: center; */
-        /* margin-left: auto;
-        margin-right: auto; */
         padding-bottom: 100px;
         margin-bottom: -40px;
         width: 5px;
@@ -311,7 +256,6 @@ a {
         letter-spacing: 5px;
     }
     #divideLine {
-        /*     color: rgb(74, 74, 74);*/
         color: rgb(55, 55, 55);
     }
     #bottomLinks {
@@ -325,19 +269,14 @@ a {
     #footer {
         bottom: 0px;
         width: 100%;
-        /* position: relative; */
         text-align: center;
         text-align: center;
         font-size: 13px;
-        /* padding-right: 20px;
-          right: 200px; */
-        /* padding-top: 50px; */
     }
     #bottomLinks {
         word-spacing: 10px;
     }
     p {
-        /* color: rgb(217, 217, 217); */
         color: rgb(179, 179, 179);
     }
 }
@@ -347,9 +286,7 @@ screen and( min-width: 500px) {
     h1 {
         white-space: nowrap;
     }
-    /* #navigateWork{
-        font-size: 1px;
-    } */
+
     #homeIcon{
         width: 50px;
     }
@@ -371,24 +308,19 @@ screen and( min-width: 500px) {
         letter-spacing: 7px;
     }
     #divideLine {
-        /*   color:rgb(179, 179, 179);*/
         color: rgb(85, 85, 85);
         margin-right: 1%;
         margin-left: 1%;
     }
     #footer {
-        /* position: fixed; */
+
         bottom: 0;
         width: 100%
     }
     #titleWork{
         line-height: 3vw;
         font-size: 1vw;
-
     }
-    
-    
-  
 }
 
 a.bottom {
@@ -407,7 +339,6 @@ a.bottom:hover:before {
     overflow: hidden;
 }
 
-
 /* Dropdown button */
 
 .dropdown .dropbtn {
@@ -420,8 +351,6 @@ a.bottom:hover:before {
 }
 
 
-/* Add a red background color to navbar links on hover */
-
 .dropdown-content {
     display: none;
     position: absolute;
@@ -431,8 +360,6 @@ a.bottom:hover:before {
 
 .dropdown-content a {
     float: none;
-    /*  color: white;*/
-    /*    padding: 10px 13px;*/
     text-decoration: none;
     display: block;
     text-align: left;
@@ -447,8 +374,6 @@ a.bottom:hover:before {
 }
 
 :root {
-    /*  --overlay-color: rgba(7, 47, 47, .88);*/
-    /* --overlay-color: rgba(0, 0, 0, .80);*/
     --menu-speed: 0.75s;
 }
 
@@ -489,7 +414,6 @@ a.bottom:hover:before {
 /* MENU STYLES */
 
 .menu-wrap {
-    /*  position: fixed;*/
     top: 0;
     position: relative;
     float: right;
@@ -531,13 +455,11 @@ a.bottom:hover:before {
     width: 20%;
     height: 1.5px;
     background: rgb(179, 179, 179);
-    /*  background: #fff;*/
     display: flex;
     align-items: center;
     justify-content: center;
     transition: all 0.4s ease;
 }
-
 
 /* Hamburger Lines - Top & Bottom */
 
@@ -566,7 +488,6 @@ a.bottom:hover:before {
     transform: rotate(135deg);
 }
 
-
 /* Turns Lines Into X */
 
 .menu-wrap .toggler:checked+.hamburger>div:before,
@@ -574,15 +495,11 @@ a.bottom:hover:before {
     top: 0;
     transform: rotate(90deg);
 }
-
-
 /* Rotate On Hover When Checked */
 
 .menu-wrap .toggler:checked:hover+.hamburger>div {
     transform: rotate(225deg);
 }
-
-
 /* Show Menu */
 
 .menu-wrap .toggler:checked~.menu {
@@ -600,10 +517,8 @@ a.bottom:hover:before {
 }
 
 .menu-wrap .menu {
-    /*menu height*/
     position: fixed;
     top: 0;
-    /*  left: 70%;*/
     width: 100%;
     height: 100%;
     visibility: hidden;
@@ -644,7 +559,6 @@ a.bottom:hover:before {
     list-style: none;
     color: #fff;
     font-size: 1.rem;
-    /*  padding: .75rem;*/
     font-family: rubik, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -659,14 +573,12 @@ a.bottom:hover:before {
 
 
 #myPic {
-    /* width: 20%; */
     height: 400px;
     position: absolute;
     opacity: 60%;
-    /* z-index: 1000; */
     text-align: left;
     margin-left: 65%;
-    margin-top: 18%/* margin: 15%; */
+    margin-top: 18%
 }
 
 
@@ -683,14 +595,6 @@ a.bottom:hover:before {
 }
 
 #bioBody {
-    /* font-family: roboto-slab, serif;
-    font-weight: 300;
-    font-style: normal; */
-    /* font-family: jubilat, serif;
-
-font-weight: 400;
-
-font-style: normal; */
 font-family: jubilat-thin,serif;
 font-weight: 200;
 font-style: normal;
@@ -698,10 +602,7 @@ letter-spacing: 2px;
     font-size: 14px;
     line-height: 24px;
     text-align: left;
-    /* width: 65%; */
     width: 875px;
-
-    /* color: rgba(104, 115, 119, 10); */
     color: rgb(28, 28, 28);
 }
 
@@ -728,8 +629,6 @@ details[open] summary span.icon {
 summary {
     display: flex;
     cursor: pointer;
-    /* display: inline-block; */
-    /* transform: rotate(180deg); */
 }
 
 summary::-webkit-details-marker {
@@ -738,14 +637,11 @@ summary::-webkit-details-marker {
 /* collapsible end */
 #expandResume {
     font-size: 15px;
-    /* padding-top: 15px; */
 }
 
 #addSpaceAbout {
     padding-top: 5%;
 }
-
-
 
 th,
     td {
@@ -766,11 +662,9 @@ th,
         border-collapse: collapse;
         color: white;
         font-size: 13px;
-        /* margin: 3%; */
     }
     
     tr {
-        /* border-bottom:1px solid rgb(58, 58, 58); */
         padding: 15px;
     }
     
@@ -781,7 +675,6 @@ th,
     summary {
         font-size: 25px;
         color: rgb(121, 121, 121);
-        /* padding-top: 5%; */
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
@@ -793,17 +686,11 @@ th,
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
-        /* font-family: magneta, serif;
-        font-weight: 400;
-        font-style: normal; */
     }
     
     #miniHeader2 {
         color: rgba(104, 115, 119, 10);
         font-size: 15px;
-        /* font-family: rubik, sans-serif;
-        font-weight: 400;
-        font-style: normal; */
         font-family: magneta, serif;
         font-weight: 400;
         font-style: normal;
@@ -825,24 +712,21 @@ th,
         font-family: rubik, sans-serif;
         font-size: 12px;
         font-weight: 400;
-        /* text-align: left; */
+
     }
     
     .skills {
         /*style the text*/
         width: 500px;
-        /* margin: 5%; */
         color: #fff;
     }
     
     .skills li {
-        /*set margin of li*/
         margin: 20px 0;
     }
     
     .bar {
-        /*style the bar*/
-        /* background-color: rgb(40, 40, 40); */
+       
         background-color: rgb(40, 40, 40);
         display: block;
         height: 2px;
@@ -922,25 +806,15 @@ th,
             width: 30%;
         }
     }
-    /* skill end */
-
-
-
-
-
-
-
+   
      /* back to top */
     
      .back-to-top-link {
         color: white;
-        /* font-size: 2rem; */
-        /* padding-top: 2%; */
         letter-spacing: 3px;
         font-family: magneta, serif;
         font-weight: 400;
         font-style: normal;
-        /* position: relative; */
         font-size: 13px;
         display: table;
         text-align: center;
@@ -948,11 +822,7 @@ th,
         margin-right: auto;
         padding-bottom: 15px;
     }
-    /* .back-to-top-wrapper {
-    position: absolute;
-    top: $scrollLength;
-    rigt: .25rem;
-} */
+  
     
     @media screen and (prefers-reduced-motion: no-preference) {
         html {
@@ -963,15 +833,11 @@ th,
     html {
         scroll-behavior: smooth;
     }
-    /* back to top end */
-    /* add num to skillbar */
-    /* end add num to skill bar */
-    /* end add num to skill bar */
+  
     
     html,
     body {
         max-width: 100%;
-        /* overflow-x: hidden; */
     }
 
     h5 {
@@ -1067,28 +933,24 @@ th,
         margin-left: 3%;
     }
     li {
-        /*style the li tag*/
         list-style-type: none;
         font-family: sans-serif;
         letter-spacing: 1px;
         font-family: rubik, sans-serif;
         font-size: 12px;
         font-weight: 400;
-        /* text-align: left; */
     }
     
     #makeWhite {
         color: rgba(104, 115, 119, 10);
         font-family: roboto-slab, serif;
         font-weight: 300;
-        /* font-style: normal; */
         font-size: 14px;
     }
     
     #makeWhite2 {
         color: white;
         font-size: 13px;
-        /* padding-top: 5%; */
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
@@ -1118,9 +980,6 @@ th,
     #titleWork {
         font-size: 17px;
         letter-spacing: 4px;
-        /* font-family: magneta, serif;
-        font-weight: 400;
-        font-style: normal; */
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
@@ -1137,7 +996,6 @@ th,
     #descriptName {
         font-size: 12px;
         margin-left: 35px;
-        /* color:#807e7e; */
         color: rgb(28, 28, 28);
         font-family: jubilat-thin,serif;
         font-weight: 200;
@@ -1150,11 +1008,6 @@ th,
         display: inline;
     }
     
-    
-    
-    
-    /* sort */
-    
     .item::after {
         content: "\a";
         white-space: pre;
@@ -1163,12 +1016,7 @@ th,
 
     button {
         background: transparent;
-            /* color: white; */
-            /* color:green; */
-            /* color:#484747; */
-        
-            color:#4d4d4d;
-        /* color: rgba(104, 115, 119, 10); */
+        color:#4d4d4d;
         text-shadow: 0px 0px 0px transparent;
     } 
 
@@ -1180,7 +1028,6 @@ th,
         }
 
         #underName{
-            /* padding-top: 60%; */
             font-size: 10vw;
             letter-spacing: 1px;
             padding-top: 30vw;
@@ -1188,17 +1035,13 @@ th,
         
         #bioBody{
             font-size: 12px;
-            /* color:green; */
-           
             width: 95%;
         }
+
         #titleWork{
         
             font-size: 14px;
             letter-spacing: 3px;
-            /* font-family: magneta, serif;
-            font-weight: 400;
-            font-style: normal; */
             font-family: rubik, sans-serif;
             font-weight: 400;
             font-style: normal;
@@ -1213,10 +1056,7 @@ th,
         }
         #descriptName{
             font-size: 11.5px;
-            /* color: rgb(74, 74, 74); */
-            /* color: rgb(179, 179, 179); */
             color: rgb(28, 28, 28);
-            /* margin-left: 8px; */
             font-family: jubilat-thin,serif;
             font-weight: 200;
             font-style: normal;
@@ -1232,21 +1072,6 @@ th,
     } 
 
  }
-
-
-
-
-
- /* fix nav */
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1313,7 +1138,7 @@ ul.sideNav li {
 
 
 a {
-    color:#747474;
+    color: rgb(74, 74, 74);
     text-decoration: none;
     display: inline-block;
 }
@@ -1325,10 +1150,6 @@ a:hover {
     -o-transition: color .2s ease-out;
     transition: color .2s ease-out;
 }
-
-
-
-
 
 
 
@@ -1351,7 +1172,6 @@ a {
 }
 
 #menuLinks {
-    /*font size for toggled menu links*/
     font-size: 20px;
     padding-bottom: 20px;
     text-shadow: 0px 1px 2px rgb(237, 237, 237);
@@ -1373,13 +1193,10 @@ a {
 
     
     #divideLine {
-        /* color: rgb(55, 55, 55); */
         color:#747474;
-        
         font-family: jubilat-thin,serif;
         font-weight: 200;
         font-style: normal;
-
     }
     ul{
         margin-right: 2rem;
@@ -1389,14 +1206,9 @@ a {
 @media (min-width: 500px)
 {
     h1 {
-        white-space: nowrap;
-        /* text-shadow: 0px 0px 1px #bfbfbf; */
-        
+        white-space: nowrap; 
     }
-    /* body{  overflow-x: scroll;} */
     .menu-wrap .menu {
-
-        /* top: 20; */
         left: 30%;
         width: 80%;
         height: 14%;
@@ -1419,8 +1231,6 @@ a {
         font-style: normal;
 
         font-size: 9.5px;
-        /* line-height: 10px;
-        vertical-align: middle; */
     }
 
 }
@@ -1504,11 +1314,6 @@ a.bottom:hover:before {
     text-align: left;
 }
 
-/* .dropdown-content a:hover {
-    color: gray;
-
-} */
-
 .dropdown:hover .dropdown-content {
     display: block;
 }
@@ -1544,7 +1349,6 @@ a.bottom:hover:before {
     font-weight: 400;
     font-style: normal;
     font-size: 5px;
-    /* margin-bottom: 10px; */
 }
 
 .btn:hover {
@@ -1587,7 +1391,6 @@ a.bottom:hover:before {
     justify-content: center;
 }
 
-
 /* Hamburger Line */
 
 .menu-wrap .hamburger>div {
@@ -1602,7 +1405,6 @@ a.bottom:hover:before {
     transition: all 0.4s ease;
 }
 
-
 /* Hamburger Lines - Top & Bottom */
 
 .menu-wrap .hamburger>div::before,
@@ -1616,20 +1418,17 @@ a.bottom:hover:before {
     background: inherit;
 }
 
-
 /* Moves Line Down */
 
 .menu-wrap .hamburger>div::after {
     top: 10px;
 }
 
-
 /* Toggler Animation */
 
 .menu-wrap .toggler:checked+.hamburger>div {
     transform: rotate(135deg);
 }
-
 
 /* Turns Lines Into X */
 
@@ -1639,13 +1438,11 @@ a.bottom:hover:before {
     transform: rotate(90deg);
 }
 
-
 /* Rotate On Hover When Checked */
 
 .menu-wrap .toggler:checked:hover+.hamburger>div {
     transform: rotate(225deg);
 }
-
 
 /* Show Menu */
 
@@ -1665,26 +1462,14 @@ a.bottom:hover:before {
 
 .menu-wrap .menu {
     position: fixed;
-     /* position: relative; */
-     /* position: static; */
      margin-left: -5%;
-/* position: absolute;  */
-    /* top: 0; */
-    /* margin-right: 50px; */
     visibility: hidden;
- 
-    /* overflow: hidden; */
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
 }
 
 .menu-wrap .menu>div {
     background: var(--overlay-color);
     border-radius: 10%;
-    /* width: 100vw; */
-    /* height: 100vw; */
-    /* display: flex; */
     flex: none;
     align-items: center;
     justify-content: center;
@@ -1693,7 +1478,6 @@ a.bottom:hover:before {
 }
 
 .menu-wrap .menu>div>div {
-        /* margin-top: 20px; */
     text-align: right;
     max-width: 100vw;
     max-height: 100vh;
@@ -1702,11 +1486,7 @@ a.bottom:hover:before {
 }
 
 .menu-wrap .menu>div>div>ul>li {
-
     list-style: none;
-    /* color: #fff; */
-    /* color:greenyellow; */
-    /* color: rgb(28, 28, 28); */
     color: #747474;
     font-size: .5vw;
     font-family: rubik, sans-serif;
@@ -1720,7 +1500,3 @@ a.bottom:hover:before {
     text-decoration: none;
     transition: color 0.4s ease;
 }
-
-
-
-   
