--- a/root/css/experiments.css
+++ b/root/css/experiments.css
@@ -7,6 +7,7 @@ body {
     overflow-x: hidden;
 }
 
+
 #underName {
 
     letter-spacing: 3px;
@@ -1176,6 +1177,12 @@ a {
     text-shadow: 0px 1px 2px rgb(237, 237, 237);
 }
 
+
+#projectName{
+    color:#626262;
+}
+
+
 @media(max-width:1000px),
 
 (max-height:500px) {
@@ -1499,3 +1506,8 @@ a.bottom:hover:before {
     text-decoration: none;
     transition: color 0.4s ease;
 }
+
+
+
+
+
