--- a/root/css/experiments.css
+++ b/root/css/experiments.css
@@ -1,6 +1,5 @@
 body {
-  
-     background-color:rgb(255, 255, 255);
+    background-color:rgb(244, 244, 244);
     color: silver;
     margin-top: 2%;
     scroll-behavior: smooth;
@@ -1499,6 +1498,9 @@ a.bottom:hover:before {
     font-weight: 400;
     font-style: normal;
     line-break: normal;
+    /* margin-top: -200px; */
+    /* white-space: nowrap; */
+    /* line-height: 300px; */
 }
 
 .menu-wrap .menu>div>div>ul>li>a {
