--- a/root/css/index.css
+++ b/root/css/index.css
@@ -1,10 +1,7 @@
 body {
-    /* background-color:rgb(222, 220, 220); */
-    /* background-color:rgb(242, 242, 242); */
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(244, 244, 244);
     margin-top: 2%;
     scroll-behavior: smooth;
-    
     overflow-x: hidden;
     -webkit-text-size-adjust: auto;
 }
@@ -141,8 +138,6 @@ h1 {
     font-style: normal;
 }
 
-
-
 #nameTitle {
     margin-top: auto;
     text-align: center;
@@ -156,7 +151,6 @@ h1 {
     display: table-cell;
     vertical-align: middle;
 }
-
 
 /*End Name*/
 
@@ -218,25 +212,21 @@ a {
 }
 
 #menuLinks {
-    /*font size for toggled menu links*/
     font-size: 20px;
     padding-bottom: 20px;
     text-shadow: 0px 1px 2px rgb(237, 237, 237);
 }
 
-@media(max-width:1000px),
-
-(max-height:500px) {
+@media(max-width:1000px),(max-height:500px) {
     #nameTitle {
         top: 50%;
         height: .2vh;
         font-size: .4vw;
-  
     }
-.text{
-    margin-bottom: .8vh;
 
-}
+    .text{
+        margin-bottom: .8vh;
+    }
 
     h2 {
         white-space: nowrap;
@@ -245,9 +235,7 @@ a {
         letter-spacing: 5px;
     }
     #divideLine {
-        /* color: rgb(55, 55, 55); */
         color:#747474;
-        
         font-family: jubilat-thin,serif;
         font-weight: 200;
         font-style: normal;
@@ -271,12 +259,15 @@ a {
         text-align: center;
         font-size: 13px;
     }
+
     #bottomLinks {
         word-spacing: 10px;
     }
+
     p {
         color: rgb(217, 217, 217);
     }
+
     ul{
         margin-right: 2rem;
     }
@@ -289,10 +280,9 @@ a {
         /* text-shadow: 0px 0px 1px #bfbfbf; */
         
     }
+
     body{  overflow-x: scroll;}
     .menu-wrap .menu {
-
-        /* top: 20; */
         left: 30%;
         width: 80%;
         height: 14%;
@@ -308,19 +298,13 @@ a {
         white-space: nowrap;
     }
     #divideLine {
-
-
         color:#747474;
         margin-right: 1%;
         margin-left: 1%;
-
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
-
         font-size: 9.5px;
-        /* line-height: 10px;
-        vertical-align: middle; */
     }
     #footer {
         position: fixed;
@@ -417,7 +401,6 @@ a.bottom:hover:before {
     font-family: inherit;
 }
 
-
 /* Add a red background color to navbar links on hover */
 
 .dropdown-content {
@@ -433,11 +416,6 @@ a.bottom:hover:before {
     display: block;
     text-align: left;
 }
-
-/* .dropdown-content a:hover {
-    color: gray;
-
-} */
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -474,13 +452,11 @@ a.bottom:hover:before {
     font-weight: 400;
     font-style: normal;
     font-size: 5px;
-    /* margin-bottom: 10px; */
 }
 
 .btn:hover {
     opacity: 0.7;
 }
-
 
 /* MENU STYLES */
 
@@ -517,7 +493,6 @@ a.bottom:hover:before {
     justify-content: center;
 }
 
-
 /* Hamburger Line */
 
 .menu-wrap .hamburger>div {
@@ -532,7 +507,6 @@ a.bottom:hover:before {
     transition: all 0.4s ease;
 }
 
-
 /* Hamburger Lines - Top & Bottom */
 
 .menu-wrap .hamburger>div::before,
@@ -546,20 +520,17 @@ a.bottom:hover:before {
     background: inherit;
 }
 
-
 /* Moves Line Down */
 
 .menu-wrap .hamburger>div::after {
     top: 10px;
 }
 
-
 /* Toggler Animation */
 
 .menu-wrap .toggler:checked+.hamburger>div {
     transform: rotate(135deg);
 }
-
 
 /* Turns Lines Into X */
 
@@ -569,13 +540,11 @@ a.bottom:hover:before {
     transform: rotate(90deg);
 }
 
-
 /* Rotate On Hover When Checked */
 
 .menu-wrap .toggler:checked:hover+.hamburger>div {
     transform: rotate(225deg);
 }
-
 
 /* Show Menu */
 
@@ -595,24 +564,14 @@ a.bottom:hover:before {
 
 .menu-wrap .menu {
     position: fixed;
-     /* position: relative; */
-     /* position: static; */
      margin-left: -5%;
-/* position: absolute;  */
-    /* top: 0; */
-    /* margin-right: 50px; */
     visibility: hidden;
- 
-    /* overflow: hidden; */
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
 }
 
 .menu-wrap .menu>div {
     background: var(--overlay-color);
     border-radius: 10%;
- 
     flex: none;
     align-items: center;
     justify-content: center;
@@ -621,7 +580,6 @@ a.bottom:hover:before {
 }
 
 .menu-wrap .menu>div>div {
-        /* margin-top: 20px; */
     text-align: right;
     max-width: 100vw;
     max-height: 100vh;
@@ -630,11 +588,7 @@ a.bottom:hover:before {
 }
 
 .menu-wrap .menu>div>div>ul>li {
-
     list-style: none;
-    /* color: #fff; */
-    /* color:greenyellow; */
-    /* color: rgb(28, 28, 28); */
     color: #747474;
     font-size: .5vw;
     font-family: rubik, sans-serif;
@@ -654,7 +608,7 @@ a.bottom:hover:before {
     margin-right: 15%;
 }
 
-
 body{
     overflow: hidden;
+    white-space: nowrap;
 }
