--- a/root/css/about.css
+++ b/root/css/about.css
@@ -125,7 +125,8 @@ img {
     line-height: 24px;
     text-align: left;
     width: 65%;
-    color: rgba(104, 115, 119, 10);
+    /* color: rgba(104, 115, 119, 10); */
+    color:#747474;
 }
 
 
@@ -357,7 +358,7 @@ li {
 
 h2 {
     color: rgb(74, 74, 74);
-    font-size: 12px;
+    font-size: 12px;p{}
     position: relative;
 }
 
@@ -470,7 +471,8 @@ a {
         word-spacing: 10px;
     }
     p {
-        color: rgb(217, 217, 217);
+        /* color: rgb(217, 217, 217); */
+        color: rgb(179, 179, 179);
     }
     .menu-wrap .menu {
         
@@ -578,7 +580,8 @@ a {
         line-height: 24px;
         text-align: left;
         width: 100%;
-        color: rgba(104, 115, 119, 10);
+        /* color: rgba(104, 115, 119, 10); */
+        color:#747474;
     }
     #shortBio{
         margin-top: -30px;
@@ -1112,7 +1115,7 @@ a {
         display: inline;
         align-items: center;
         justify-content: center;
-        hite-space: nowrap;
+        white-space: nowrap;
     }
     body{  overflow-x: scroll;}
 
