--- a/root/css/experiments.css
+++ b/root/css/experiments.css
@@ -9,7 +9,7 @@ body {
 
 #underName {
 
-    letter-spacing: 3px;
+    /* letter-spacing: 3px; */
     font-family: rubik, sans-serif;
     font-weight: 400;
     font-style: normal;
