--- a/root/css/experiments.css
+++ b/root/css/experiments.css
@@ -1,36 +1,30 @@
 body {
     background-color:rgb(244, 244, 244);
-    /* color: silver; */
     margin-top: 2%;
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
 
-
 #underName {
 
-    /* letter-spacing: 3px; */
+    letter-spacing: 3px;
     font-family: rubik, sans-serif;
     font-weight: 400;
     font-style: normal;
     position: relative;
-    font-size: 13px;
-}
-#footer{
-    font-family: jubilat-thin,serif;
-font-weight: 200;
-font-style: normal;
-letter-spacing: 2px;
-}
-#underName {
     letter-spacing: 10px;
-}
-#underName {
     font-size: 80px;
     padding-top: 300px;
     color:#747474;
-
 }
+
+#footer{
+    font-family: jubilat-thin,serif;
+    font-weight: 200;
+    font-style: normal;
+    letter-spacing: 2px;
+}
+
 #navigateWork {
     font-size: 13px;
     letter-spacing: 2px;
@@ -82,8 +76,6 @@ img {
     text-decoration: line-through;
     display: inline;
 }
-
-
 
 #hyphenOne {
     color: rgb(47, 47, 47);
@@ -167,18 +159,17 @@ h2 {
     position: relative;
 }
 
-    #footer {
-        display: table;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 8px;
-        letter-spacing: 1px;
-        color: rgb(74, 74, 74);
-        font-size: 13px;
-        z-index: 20000;
-  
-    }
+#footer {
+    display: table;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 8px;
+    letter-spacing: 1px;
+    color: rgb(74, 74, 74);
+    font-size: 13px;
+    z-index: 20000;
+}
 
 h6 {
     color:#747474;
@@ -230,18 +221,14 @@ a {
     }
     #descriptName{
         white-space: nowrap;
-
     }
 }
-
 
 @media(max-width:1000px),
 (max-height:500px) {
     #nameTitle {
         top: 50%;
     }
-
- 
 
     h1 {
         top: 30%;
@@ -276,8 +263,6 @@ a {
         word-spacing: 10px;
     }
     p {
-        /* color: rgb(179, 179, 179); */
-        /* color:#747474; */
         color: rgb(179, 179, 179);
     }
 }
@@ -351,7 +336,6 @@ a.bottom:hover:before {
     font-family: inherit;
 }
 
-
 .dropdown-content {
     display: none;
     position: absolute;
@@ -411,7 +395,6 @@ a.bottom:hover:before {
     opacity: 0.7;
 }
 
-
 /* MENU STYLES */
 
 .menu-wrap {
@@ -447,7 +430,6 @@ a.bottom:hover:before {
     justify-content: center;
 }
 
-
 /* Hamburger Line */
 
 .menu-wrap .hamburger>div {
@@ -481,7 +463,6 @@ a.bottom:hover:before {
 .menu-wrap .hamburger>div::after {
     top: 10px;
 }
-
 
 /* Toggler Animation */
 
@@ -543,7 +524,6 @@ a.bottom:hover:before {
 }
 
 #menuLinks {
-    /*font size for toggled menu links*/
     font-size: 20px;
     padding-bottom: 20px;
 }
@@ -571,19 +551,6 @@ a.bottom:hover:before {
     transition: color 0.4s ease;
 }
 
-
-
-#myPic {
-    height: 400px;
-    position: absolute;
-    opacity: 60%;
-    text-align: left;
-    margin-left: 65%;
-    margin-top: 18%
-}
-
-
-
 #margined {
     margin-left: 15%;
     margin-right: 15%;
@@ -606,26 +573,6 @@ letter-spacing: 2px;
     width: 875px;
     /* color: rgb(28, 28, 28); */
     color:#747474;
-}
-
-
-
-  /* collabsible */
-    
-  details {
-    user-select: none;
-    padding-bottom: 3%;
-}
-
-details>summary span.icon {
-    width: 24px;
-    height: 24px;
-    transition: all 0.3s;
-    margin-left: auto;
-}
-
-details[open] summary span.icon {
-    transform: rotate(180deg);
 }
 
 summary {
@@ -716,99 +663,7 @@ th,
         font-weight: 400;
 
     }
-    
-    .skills {
-        /*style the text*/
-        width: 500px;
-        color: #fff;
-    }
-    
-    .skills li {
-        margin: 20px 0;
-    }
-    
-    .bar {
-       
-        background-color: rgb(40, 40, 40);
-        display: block;
-        height: 2px;
-        border: 1px solid rgba(0, 0, 0, 0.3);
-        border-radius: 3px;
-        overflow: hidden;
-        box-shadow: 0 0 2px grey;
-    }
-    
-    .bar span {
-        /*style the span tag*/
-        height: 2px;
-        float: left;
-        background-color: rgba(104, 115, 119, 10);
-    }
-    
-    .html {
-        /*set skills and animation of html*/
-        width: 80%;
-        animation: html 2s;
-    }
-    
-    .css {
-        /*set skills and animation of css*/
-        width: 93%;
-        animation: css 2s;
-    }
-    
-    .javascript {
-        /*set skills and animation of javascript*/
-        width: 50%;
-        animation: javascript 2s;
-    }
-    
-    .jquery {
-        /*set skills and animation of jquery*/
-        width: 30%;
-        animation: jquery 2s;
-    }
-    
-    @keyframes html {
-        /*animate html skills*/
-        0% {
-            width: 0%;
-        }
-        100% {
-            width: 80%;
-        }
-    }
-    
-    @keyframes css {
-        /*animate css skills*/
-        0% {
-            width: 0%;
-        }
-        100% {
-            width: 93%;
-        }
-    }
-    
-    @keyframes javascript {
-        /*animate javascript skills*/
-        0% {
-            width: 0%;
-        }
-        100% {
-            width: 50%;
-        }
-    }
-    
-    @keyframes jquery {
-        /*animate jquery skills*/
-        0% {
-            width: 0%;
-        }
-        100% {
-            width: 30%;
-        }
-    }
-   
+
      /* back to top */
     
      .back-to-top-link {
@@ -825,7 +680,6 @@ th,
         padding-bottom: 15px;
     }
   
-    
     @media screen and (prefers-reduced-motion: no-preference) {
         html {
             scroll-behavior: smooth;
@@ -835,7 +689,6 @@ th,
     html {
         scroll-behavior: smooth;
     }
-  
     
     html,
     body {
@@ -848,80 +701,11 @@ th,
         font-style: normal;
         line-height: 25px;
         display: inline-block;
-        /* display: inline; */
         text-align: right;
         margin-left: 60%;
     }
 
 
-    #javaPercent {
-        margin-left: 60%;
-    }
-    
-    #cPercent {
-        margin-left: 40%;
-    }
-    
-    #pythonPercent {
-        margin-left: 30%;
-    }
-    
-    #reactPercent {
-        margin-left: 20%;
-    }
-    
-    #htmlPercent {
-        margin-left: 10%;
-    }
-    
-    #jsPercent {
-        margin-left: 30%;
-    }
-    
-    #phpPercent {
-        margin-left: 80%;
-    }
-    
-    #aePercent {
-        margin-left: 90%;
-    }
-    
-    #aePercent {
-        margin-left: 70%;
-    }
-    
-    #ccPercent {
-        margin-left: 99%;
-    }
-    
-    #unityPercent {
-        margin-left: 50%;
-    }
-    
-    #mayaPercent {
-        margin-left: 40%;
-    }
-    
-    #figmaPercent {
-        margin-left: 30%;
-    }
-    
-    #figmaPercent {
-        margin-left: 20%;
-    }
-    
-    #houdiniPercent {
-        margin-left: 10%;
-    }
-    
-    #webglPercent {
-        margin-left: 10%;
-    }
-    
-    #glsl {
-        margin-left: 10%;
-    }
-    
     #ctt {
         margin-left: 10%;
     }
@@ -930,10 +714,10 @@ th,
         text-align: left;
     }
 
-
     col #exit {
         margin-left: 3%;
     }
+
     li {
         list-style-type: none;
         font-family: sans-serif;
@@ -958,10 +742,6 @@ th,
         font-style: normal;
         line-height: 1.9em;
     }
-
-
-
-
 
     a.bottom:before {
         content: "";
@@ -1006,7 +786,6 @@ th,
     }
 
     item {
-    
         display: inline;
     }
     
@@ -1025,14 +804,13 @@ th,
     @media screen and (max-width: 1050px){
         #margined{
             margin-left: 5%;
-            margin-right: 5%;
-            
+            margin-right: 5%;  
         }
 
         #underName{
             font-size: 10vw;
             letter-spacing: 1px;
-            padding-top: 30vw;
+            font-size: 10vw;
         }
         
         #bioBody{
@@ -1041,7 +819,6 @@ th,
         }
 
         #titleWork{
-        
             font-size: 14px;
             letter-spacing: 3px;
             font-family: rubik, sans-serif;
@@ -1053,26 +830,26 @@ th,
             z-index: 60;
             
         }
+
         #homeIcon{
             position: relative;
         }
+
         #descriptName{
             font-size: 11.5px;
             color: rgb(28, 28, 28);
             font-family: jubilat-thin,serif;
             font-weight: 200;
             font-style: normal;
-            letter-spacing: 2px;
-
-            
+            letter-spacing: 2px;  
         }
+
         button{
         font-size: 11px;
         padding: 5px;
         margin-left: 5px;
         margin-top: 20px;
     } 
-
  }
 
 
@@ -1192,11 +969,9 @@ a {
         top: 50%;
         height: .2vh;
         font-size: .4vw;
-  
     }
 .text{
     margin-bottom: .8vh;
-
 }
 
     
@@ -1228,23 +1003,17 @@ a {
     }
     
     #divideLine {
-
-
         color:#747474;
         margin-right: 1%;
         margin-left: 1%;
-
         font-family: rubik, sans-serif;
         font-weight: 400;
         font-style: normal;
-
         font-size: 9.5px;
     }
-
 }
 
-@media (max-width: 500px) {
-   
+@media (max-width: 500px) 
 
     .menu-wrap .menu {
         right: 10%;
@@ -1256,13 +1025,9 @@ a {
         justify-content: center;
     }
 
-    
-
     #divideTab {
       display: none;
     }
-
- 
 
     #menuLinks {
         font-size: 3.5vw;
@@ -1271,9 +1036,7 @@ a {
 
     ul{
         margin-right: 1rem;
-    }
-
-    
+    }  
 }
 
 
@@ -1294,7 +1057,6 @@ a.bottom:hover:before {
     overflow: hidden;
 }
 
-
 /* Dropdown button */
 
 .dropdown .dropbtn {
@@ -1304,7 +1066,6 @@ a.bottom:hover:before {
     background-color: inherit;
     font-family: inherit;
 }
-
 
 /* Add a red background color to navbar links on hover */
 
@@ -1501,9 +1262,6 @@ a.bottom:hover:before {
     font-weight: 400;
     font-style: normal;
     line-break: normal;
-    /* margin-top: -200px; */
-    /* white-space: nowrap; */
-    /* line-height: 300px; */
 }
 
 .menu-wrap .menu>div>div>ul>li>a {
@@ -1511,8 +1269,3 @@ a.bottom:hover:before {
     text-decoration: none;
     transition: color 0.4s ease;
 }
-
-
-
-
-
