--- a/root/css/about.css
+++ b/root/css/about.css
@@ -11,10 +11,10 @@ hr{
     margin-left: 0px;
 }
 
-#myInput{
+/* #myInput{
     font-size: 14px;
    
-}
+} */
 .container {
     align-content: flex-start
   }
