--- a/root/css/experiments.css
+++ b/root/css/experiments.css
@@ -221,6 +221,19 @@ a {
     #descriptName{
         white-space: nowrap;
     }
+
+    #underName {
+
+    letter-spacing: 3px;
+    font-family: rubik, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    position: relative;
+    letter-spacing: 10px;
+    font-size: 80px;
+    padding-top: 100px;
+    color:#747474;
+}
 }
 
 @media(max-width:1000px),
