--- a/root/css/about.css
+++ b/root/css/about.css
@@ -710,7 +710,7 @@ a.bottom:hover:before {
     left: 0;
     z-index: 2;
     cursor: pointer;
-    width: 90px;
+    width: 40px;
     height: 50px;
     opacity: 0;
 }
@@ -1253,7 +1253,7 @@ a.bottom:hover:before {
     left: 0;
     z-index: 2;
     cursor: pointer;
-    width: 90px;
+    width: 40px;
     height: 50px;
     opacity: 0;
 }
@@ -1420,4 +1420,9 @@ a.bottom:hover:before {
 #margined {
     margin-left: 15%;
     margin-right: 15%;
+}
+body {
+
+    overflow-x: hidden;
+
 }
