three js styling

--- a/root/css/about.css
+++ b/root/css/about.css
@@ -5,7 +5,6 @@ body {
     overflow-x: hidden;
     -webkit-text-size-adjust: auto;
 }
-
 hr{
     width:85%;
     margin-left: 0px;
@@ -14,24 +13,22 @@ hr{
 .container {
     align-content: flex-start
   }
-
 #toLeft{
     font-size: 10px;
-}
 
+}
 #resume{
     font-size: 14px;
 }
-
 .bullet{
     padding-right: 10px;
-    vertical-align: middle; 
+    vertical-align: middle;
+    
 }
 
 #rightAlignTab{
     text-align: right;
 }
-
 #footer {
     padding-top: 50px;
     bottom: 0; 
@@ -60,35 +57,36 @@ hr{
     animation-duration: 5s;
 }
 
-th,td {
-    padding-right: 15px;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    text-align: left;
-    border: 0;
-    border-left: none;
-    border-collapse: collapse;
-    letter-spacing: .9pt;
-    font-family: jubilat,serif;
-    font-weight: 200;
-    font-style: normal;
-    color:#656464;
-}
+th,
+    td {
+        padding-right: 15px;
+        padding-bottom: 15px;
+        padding-top: 15px;
+        text-align: left;
+        border: 0;
+        border-left: none;
+        border-collapse: collapse;
+        letter-spacing: .9pt;
+        font-family: jubilat,serif;
+        font-weight: 200;
+        font-style: normal;
+        color:#656464;
+    }
     
-table {
-    border-collapse: collapse;
-    color: rgba(104, 115, 119, 10);
-    font-size: 11px;
+    table {
+        border-collapse: collapse;
+        color: rgba(104, 115, 119, 10);
+        font-size: 11px;
 
-}
-
-tr {
-    padding: 15px;
-}
-
-td {
-    font-size: 13px;
-}
+    }
+    
+    tr {
+        padding: 15px;
+    }
+    
+    td {
+        font-size: 13px;
+    }
 img {
     display: inline;
 }
@@ -146,6 +144,7 @@ li {
     float: left;
     vertical-align: middle;
     text-align: center;
+    /* white-space: nowrap; */
 }
 
 #sideLinks {
@@ -153,6 +152,7 @@ li {
     right: 80%;
     display: inline;
     margin-right: 2vw;
+    /* position: absolute; */
     right: 0;
     -webkit-transform-origin: left top;
     -webkit-transform: rotate(-90deg) translateX(-100%);
@@ -200,6 +200,7 @@ h1 {
 }
 
 #underName {
+    /* padding-top: 300px; */
     letter-spacing: 10px;
     font-family: rubik, sans-serif;
     font-weight: 400;
@@ -258,6 +259,9 @@ h3 {
     display: inline;
     text-align: left;
 }
+
+
+
 
  /* back to top */
 
@@ -554,7 +558,8 @@ a {
         font-size: 12px;
         line-height: 24px;
         text-align: left;
-        width: 95%;
+        width: 100%;
+        /* color: rgba(104, 115, 119, 10); */
         color:#747474;
     }
     .shortBio{
@@ -1147,6 +1152,7 @@ a {
         font-style: normal;
         margin-top: -20vh;
         line-break: normal;
+        /* white-space: nowrap; */
     }
 }
 
@@ -1417,5 +1423,7 @@ a.bottom:hover:before {
 }
 
 body {
+
     overflow-x: hidden;
+
 }
