--- a/root/homeThreeJS/src/style.css
+++ b/root/homeThreeJS/src/style.css
@@ -23,17 +23,22 @@ body
     position: absolute;
     top: 15%;
     width: 100%;
-    height: 3px;
-    background: #8f8f8f;
+    height: 2px;
+    background: #8f9fa2;
     transform: scaleX(0);
-    transform-origin: top right;
+
+    /* stroke-linecap: round; */
+    transform-origin: 50% 50%;
+
+
     transition: transform 0.5s;
+
     will-change: transform;
 }
 
 .loading-bar.ended{
 transform:scaleX(0);
-transform-origin: center;
+transform-origin: bottom right;
 transform: transform 1.5s ease-in-out;
 }
 
@@ -656,4 +661,7 @@ a.bottom:hover:before {
  body{
     overflow: hidden;
     white-space: nowrap;
-}  
+} 
+#sub{
+    font-size: 5px;
+} 
